--- a/CASHIERENTERFACE/DASHBOARDCASHIER/styles.css
+++ b/CASHIERENTERFACE/DASHBOARDCASHIER/styles.css
@@ -73,6 +73,16 @@ body {
   font-weight: 400;
   color: #2563eb;
 }
+
+.tab:hover {
+  background-color: #ababab;
+}
+
+.tab.active {
+  background-color: #ababab;
+  font-weight: 380;
+  color: #2563eb;
+}
 .main-content {
   width: calc(100% - 320px);
   margin-left: 320px;
@@ -94,4 +104,8 @@ label {
   font-weight: 500;
   margin-bottom: 10px;
   color: rgb(7, 7, 108);
+}
+.content {
+  align-items: center;
+  display: flex;
 }
